engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_halfwidth_directory.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1903
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 42, height: 3 },
    content: [
        "                                          ",
        "  >_ OpenAI Codex (vtest)                 ",
        "     …ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ-project", // hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " ")]
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 25, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 19, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 25, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 33, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
